--- a/block-BHaacs/index.html
+++ b/block-BHaacs/index.html
@@ -15,6 +15,18 @@
     />
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="container flex">
+        <a href="#" class="logo">TrackL</a>
+        <nav>
+          <ul class="nav-list flex">
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Help</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
