add hero section and give style to hero section

--- a/block-BHaacs/index.html
+++ b/block-BHaacs/index.html
@@ -28,5 +28,14 @@
         </nav>
       </div>
     </header>
+    <main>
+      <section class="hero">
+        <div class="container hero-container">
+          <h1>Track The Learning<br />process Schedule</h1>
+          <a href="#" class="btn btn-hero">Get 30 Days Trial</a>
+          <img class="full-width" src="assets/hero.png" alt="hero" />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
