add file section and give style to file section

--- a/block-BHaacs/index.html
+++ b/block-BHaacs/index.html
@@ -36,6 +36,17 @@
           <img class="full-width" src="assets/hero.png" alt="hero" />
         </div>
       </section>
+
+      <section class="file-section">
+        <div class="container">
+          <ul class="flex padding">
+            <li><a href="#.pdf">pdf file</a></li>
+            <li><a href="#.doc">word file</a></li>
+            <li><a href="#.png">image file</a></li>
+            <li><a href="#.mp4">video file</a></li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
