add monitor section and give style to monitor section

--- a/block-BHaacs/index.html
+++ b/block-BHaacs/index.html
@@ -29,6 +29,7 @@
       </div>
     </header>
     <main>
+      <!-- Hero -->
       <section class="hero">
         <div class="container hero-container">
           <h1>Track The Learning<br />process Schedule</h1>
@@ -36,8 +37,8 @@
           <img class="full-width" src="assets/hero.png" alt="hero" />
         </div>
       </section>
-
-      <section class="file-section">
+      <!-- File Section -->
+      <section class="file-section padding">
         <div class="container">
           <ul class="flex padding">
             <li><a href="#.pdf">pdf file</a></li>
@@ -45,6 +46,27 @@
             <li><a href="#.png">image file</a></li>
             <li><a href="#.mp4">video file</a></li>
           </ul>
+        </div>
+      </section>
+      <!-- monitor section -->
+      <section class="monitor-section padding">
+        <div class="container flex">
+          <article class="monitor-article">
+            <h3>Monitor your learning and improve it</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+              dicta, nihil voluptates asperiores amet libero blanditiis
+              repellendus aut? Ullam, molestiae?
+            </p>
+            <a href="#" class="btn btn-monitor">Learn More</a>
+          </article>
+          <div class="monitor-img-container">
+            <img
+              class="full-width"
+              src="assets/learning-graph.png"
+              alt="learning-graph"
+            />
+          </div>
         </div>
       </section>
     </main>
