add weekly score section and give style to weekly score section

--- a/block-BHaacs/index.html
+++ b/block-BHaacs/index.html
@@ -69,6 +69,72 @@
           </div>
         </div>
       </section>
+      <!-- Weekly Score section -->
+      <section class="weekly-score-section padding">
+        <div class="container">
+          <h2>Weekly Score</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>Days</th>
+                <th>Course</th>
+                <th>Score(0-100)</th>
+                <th>Hours Spent</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Monday</td>
+                <td>Product Design</td>
+                <td>40</td>
+                <td>2 Hour 30 Min</td>
+              </tr>
+
+              <tr>
+                <td>Tuesday</td>
+                <td>Product Design</td>
+                <td>60</td>
+                <td>2 Hour 30 Min</td>
+              </tr>
+
+              <tr>
+                <td>Wednesday</td>
+                <td>Data Science</td>
+                <td>20</td>
+                <td>3 Hour 30 Min</td>
+              </tr>
+
+              <tr>
+                <td>Thursday</td>
+                <td>UI Design</td>
+                <td>60</td>
+                <td>1 Hour 30 Min</td>
+              </tr>
+
+              <tr>
+                <td>Friday</td>
+                <td>UX Design</td>
+                <td>30</td>
+                <td>2 Hour 20 Min</td>
+              </tr>
+
+              <tr>
+                <td>Saturday</td>
+                <td>Data Science</td>
+                <td>50</td>
+                <td>2 Hour 40 Min</td>
+              </tr>
+
+              <tr>
+                <td>Sunday</td>
+                <td>HTML & CSS</td>
+                <td>70</td>
+                <td>3 Hour 30 Min</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
     </main>
   </body>
 </html>
