add trial section and give style to trial section

--- a/block-BHaacs/index.html
+++ b/block-BHaacs/index.html
@@ -231,6 +231,13 @@
           </section>
         </div>
       </section>
+      <!-- trial sections -->
+      <section class="trial padding">
+        <div class="container trial-container">
+          <h2>Start Your 30 Days Trial Now!</h2>
+          <a href="#" class="btn btn-trial">Get Started</a>
+        </div>
+      </section>
     </main>
   </body>
 </html>
