add footer and give style to footer

--- a/block-BHaacs/index.html
+++ b/block-BHaacs/index.html
@@ -239,5 +239,56 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="container flex align-start">
+        <ul>
+          <li><h4>TrackL</h4></li>
+          <li>
+            <p>Far far away, behined the word mountains, far from the.</p>
+          </li>
+          <li>
+            <ul class="flex justify-start">
+              <li>
+                <a href="#" class="icon"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" class="icon"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" class="icon"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+
+        <ul>
+          <li><h4>Features</h4></li>
+          <li><p>Calender</p></li>
+          <li><p>Forum</p></li>
+          <li><p>Messanger</p></li>
+          <li><p>Schedule</p></li>
+        </ul>
+
+        <ul>
+          <li><h4>Support</h4></li>
+          <li><p>About Us</p></li>
+          <li><p>Career</p></li>
+          <li><p>FAQs</p></li>
+          <li><p>Security</p></li>
+        </ul>
+
+        <ul>
+          <li><h4>Contact</h4></li>
+          <li><p>hello@trackl.io</p></li>
+          <li><p>(+00) 0000 000 000</p></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
